"Fix: start button not visible on build custom on pull request action list

--- a/app/assets/stylesheets/categoryList.less
+++ b/app/assets/stylesheets/categoryList.less
@@ -39,7 +39,6 @@
 
 .dropdown-menu {
   overflow: hidden;
-  max-height: 600px;
   max-width: 300px;
 }
 
